infrastructure/kubernetes/charts/external-ingress.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-ingress
  namespace: external-ingress
---
apiVersion: v1
kind: Service
metadata:
  name: external-ingress-frigate-svc-c8980b75
  namespace: external-ingress
spec:
  clusterIP: None
  externalIPs: []
  ports:
    - port: 80
      targetPort: 5000
  selector: {}
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-ingress-frigate-svc-c8980b75
  namespace: external-ingress
subsets:
  - addresses:
      - ip: 10.0.10.9
    ports:
      - port: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: external-ingress-frigate-c802f980
  namespace: external-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: frigate.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: external-ingress-frigate-svc-c8980b75
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - frigate.us-drig-1.drigs.org
      secretName: ext-external-ingress-frigate-svc-c8980b75-tls-c868130f
---
apiVersion: v1
kind: Service
metadata:
  name: external-ingress-home-svc-c83a79d8
  namespace: external-ingress
spec:
  clusterIP: None
  externalIPs: []
  ports:
    - port: 80
      targetPort: 8123
  selector: {}
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-ingress-home-svc-c83a79d8
  namespace: external-ingress
subsets:
  - addresses:
      - ip: 10.0.10.9
    ports:
      - port: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: external-ingress-home-c86698b0
  namespace: external-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: home.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: external-ingress-home-svc-c83a79d8
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - home.us-drig-1.drigs.org
      secretName: extern-external-ingress-home-svc-c83a79d8-tls-c88a50de
---
apiVersion: v1
kind: Service
metadata:
  name: external-ingress-z2m-svc-c830d1e7
  namespace: external-ingress
spec:
  clusterIP: None
  externalIPs: []
  ports:
    - port: 80
      targetPort: 8080
  selector: {}
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-ingress-z2m-svc-c830d1e7
  namespace: external-ingress
subsets:
  - addresses:
      - ip: 10.0.30.46
    ports:
      - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: external-ingress-z2m-c8bf4c0f
  namespace: external-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: z2m.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: external-ingress-z2m-svc-c830d1e7
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - z2m.us-drig-1.drigs.org
      secretName: externa-external-ingress-z2m-svc-c830d1e7-tls-c8d5dbeb
---
apiVersion: v1
kind: Service
metadata:
  name: external-ingress-dns-svc-c8a1d96a
  namespace: external-ingress
spec:
  clusterIP: None
  externalIPs: []
  ports:
    - port: 80
      targetPort: 80
  selector: {}
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-ingress-dns-svc-c8a1d96a
  namespace: external-ingress
subsets:
  - addresses:
      - ip: 10.10.10.10
    ports:
      - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
    nginx.ingress.kubernetes.io/app-root: /admin
  name: external-ingress-dns-c86b125b
  namespace: external-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dns.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: external-ingress-dns-svc-c8a1d96a
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dns.us-drig-1.drigs.org
      secretName: externa-external-ingress-dns-svc-c8a1d96a-tls-c838654d
---
apiVersion: v1
kind: Service
metadata:
  name: external-ingress-truenas-svc-c81704ae
  namespace: external-ingress
spec:
  clusterIP: None
  externalIPs: []
  ports:
    - port: 80
      targetPort: 80
  selector: {}
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-ingress-truenas-svc-c81704ae
  namespace: external-ingress
subsets:
  - addresses:
      - ip: 10.0.10.180
    ports:
      - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: external-ingress-truenas-c8341cbd
  namespace: external-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: truenas.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: external-ingress-truenas-svc-c81704ae
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - truenas.us-drig-1.drigs.org
      secretName: ext-external-ingress-truenas-svc-c81704ae-tls-c888fdf6
---
apiVersion: v1
kind: Service
metadata:
  name: external-ingress-dominaria-svc-c8351866
  namespace: external-ingress
spec:
  clusterIP: None
  externalIPs: []
  ports:
    - port: 8006
      targetPort: 8006
  selector: {}
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-ingress-dominaria-svc-c8351866
  namespace: external-ingress
subsets:
  - addresses:
      - ip: 10.0.10.11
    ports:
      - port: 8006
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
    ingress.kubernetes.io/configuration-snippet: |-
      proxy_set_header Host $http_host;
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;      
      proxy_http_version 1.1;
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection $connection_upgrade;      
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, PUT, PATCH, DELETE, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/server-snippet: |-
      client_max_body_size 100G;
      server_tokens off;
      proxy_hide_header X-Powered-By;
  name: external-ingress-dominaria-c8ee2739
  namespace: external-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dominaria.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: external-ingress-dominaria-svc-c8351866
                port:
                  number: 8006
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dominaria.us-drig-1.drigs.org
      secretName: e-external-ingress-dominaria-svc-c8351866-tls-c8071bde
---
apiVersion: v1
kind: Service
metadata:
  name: external-ingress-ravnica-svc-c80621c5
  namespace: external-ingress
spec:
  clusterIP: None
  externalIPs: []
  ports:
    - port: 8006
      targetPort: 8006
  selector: {}
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-ingress-ravnica-svc-c80621c5
  namespace: external-ingress
subsets:
  - addresses:
      - ip: 10.0.10.11
    ports:
      - port: 8006
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
    ingress.kubernetes.io/configuration-snippet: |-
      proxy_set_header Host $http_host;
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;      
      proxy_http_version 1.1;
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection $connection_upgrade;      
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, PUT, PATCH, DELETE, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/server-snippet: |-
      client_max_body_size 100G;
      server_tokens off;
      proxy_hide_header X-Powered-By;
  name: external-ingress-ravnica-c8b39c9d
  namespace: external-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ravnica.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: external-ingress-ravnica-svc-c80621c5
                port:
                  number: 8006
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ravnica.us-drig-1.drigs.org
      secretName: ext-external-ingress-ravnica-svc-c80621c5-tls-c8ae756f
