infrastructure/kubernetes/charts/gatus.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatus
  namespace: gatus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus-app-deployment-c84b390a
  namespace: gatus
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: gatus-app-deployment-c8817ca1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: gatus-app-deployment-c8817ca1
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: POSTGRES_USER
              value: gatus
            - name: POSTGRES_DB
              value: gatus
            - name: POSTGRES_HOST
              value: gatus-cluster-c8dde654-rw
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: gatus-database-secret-c830a0e6
            - name: DISCORD_WEBHOOK
              valueFrom:
                secretKeyRef:
                  key: credential
                  name: gatus-webhook-secret-c8331106
          image: twinproduction/gatus:latest
          imagePullPolicy: Always
          name: gatus
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: configmap-gatus-app-config-c8d6c115
              readOnly: true
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            name: gatus-app-config-c8d6c115
          name: configmap-gatus-app-config-c8d6c115
---
apiVersion: v1
kind: Service
metadata:
  name: gatus-app-service-c8ee1267
  namespace: gatus
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8080
  selector:
    cdk8s.io/metadata.addr: gatus-app-deployment-c8817ca1
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: gatus-app-ingress-c8de69aa
  namespace: gatus
spec:
  ingressClassName: nginx
  rules:
    - host: gatus.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: gatus-app-service-c8ee1267
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - gatus.us-drig-1.drigs.org
      secretName: gatus-app-gatus-app-service-c8ee1267-tls-c81becf9
