infrastructure/kubernetes/charts/tandoor.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tandoor
  namespace: tandoor
---
apiVersion: v1
kind: Service
metadata:
  name: tandoor-cluster-service-c8a123db
  namespace: tandoor
spec:
  externalIPs: []
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cnpg.io/cluster: tandoor-cluster-c81ce26b
    cnpg.io/instanceRole: primary
    role: primary
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tandoor-app-deployment-c88f5b0b
  namespace: tandoor
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: tandoor-app-deployment-c8e157b3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: tandoor-app-deployment-c8e157b3
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  key: credential
                  name: tandoor-secret-key-c89f0b18
            - name: TIMEZONE
              value: Etc/UTC
            - name: ENABLE_METRICS
              value: "0"
            - name: DB_ENGINE
              value: django.db.backends.postgresql
            - name: POSTGRES_HOST
              value: tandoor-cluster-service-c8a123db
            - name: POSTGRES_PORT
              value: "5432"
            - name: POSTGRES_USER
              value: tandoor
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: tandoor-database-secret-c84ab718
            - name: POSTGRES_DB
              value: tandoor
            - name: ENABLE_SIGNUP
              value: "0"
          image: vabene1111/recipes:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 30
          name: tandoor
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /opt/recipes/staticfiles
              name: pvc-tandoor-static-c8986e11
              subPath: files
            - mountPath: /opt/recipes/mediafiles
              name: pvc-tandoor-media-c862fd5c
              subPath: files
        - env:
            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  key: credential
                  name: tandoor-secret-key-c89f0b18
            - name: TIMEZONE
              value: Etc/UTC
            - name: ENABLE_METRICS
              value: "0"
            - name: DB_ENGINE
              value: django.db.backends.postgresql
            - name: POSTGRES_HOST
              value: tandoor-cluster-service-c8a123db
            - name: POSTGRES_PORT
              value: "5432"
            - name: POSTGRES_USER
              value: tandoor
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: tandoor-database-secret-c84ab718
            - name: POSTGRES_DB
              value: tandoor
            - name: ENABLE_SIGNUP
              value: "0"
          image: nginx:latest
          imagePullPolicy: Always
          name: nginx
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 8080
              name: gunicorn
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /opt/recipes/staticfiles
              name: pvc-tandoor-static-c8986e11
              subPath: files
            - mountPath: /opt/recipes/mediafiles
              name: pvc-tandoor-media-c862fd5c
              subPath: files
            - mountPath: /etc/nginx/nginx.conf
              name: configmap-tandoor-app-nginx-config-c89ed156
              readOnly: true
              subPath: nginx-config
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-tandoor-static-c8986e11
          persistentVolumeClaim:
            claimName: tandoor-static-c8986e11
            readOnly: false
        - name: pvc-tandoor-media-c862fd5c
          persistentVolumeClaim:
            claimName: tandoor-media-c862fd5c
            readOnly: false
        - configMap:
            name: tandoor-app-nginx-config-c89ed156
          name: configmap-tandoor-app-nginx-config-c89ed156
---
apiVersion: v1
kind: Service
metadata:
  name: tandoor-app-service-c8660a88
  namespace: tandoor
spec:
  externalIPs: []
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    cdk8s.io/metadata.addr: tandoor-app-deployment-c8e157b3
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: tandoor-ingress-c83cef19
  namespace: tandoor
spec:
  ingressClassName: nginx
  rules:
    - host: tandoor.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: tandoor-app-service-c8660a88
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - tandoor.us-drig-1.drigs.org
      secretName: tandoor-tandoor-app-service-c8660a88-tls-c87e308d
